Bug 168131 - Drag-and-drop a PDF file on a spreadsheet fails with "General input/output error"
Summary: Drag-and-drop a PDF file on a spreadsheet fails with "General input/output er...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.2
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-27 08:54 UTC by Mike Kaganski
Modified: 2025-09-04 09:26 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-08-27 08:54:40 UTC
1. Create a Calc document
2. Drag a PDF from your file manager to the Calc document's cell grid

=> General input/output error

For comparison, dragging an ODT would insert it as an OLE object.
Comment 1 Mike Kaganski 2025-08-27 09:10:54 UTC
https://gerrit.libreoffice.org/c/core/+/190274
Comment 2 Commit Notification 2025-08-27 10:52:18 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dfb5639721031bcc43905576e84a97bed512567e

tdf#168131: don't pick hybrid PDF, when normal PDF was detected

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-09-04 09:26:59 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/831dc39f045b909b03dcff300c31986a06ad5502

tdf#168131: don't pick hybrid PDF, when normal PDF was detected

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.